# x_claw

./: .gitignore  README.md  pyproject.toml  setup.py
.agents/: skills
docs/: DESIGN.md  usage.md
src/x_claw/: agent_adapter.py  cli.py  executor.py  gateway.py  human_io.py
src/x_claw/agents/: developer.md  product_owner.md  project_manager.md  qa.md  tester.md
src/x_claw/skills/xllm-repo-learning/: SKILL.md
src/x_claw/skills/xllm-repo-learning/references/: 1-structure.md  10-request.md  11-scheduler.md  12-xtensor.md  2-prefix_cache.md  3-schedule_overlap.md  4-pd_disaggregate.md  5-batch.md
src/xclaw/: __init__.py  agent_adapter.py  artifact_store.py  cli.py  executor.py  human_io.py  markdown.py  models.py  protocol.py  task_store.py  workspace.py
src/xclaw/agents/: architect.md  developer.md  product_owner.md  project_manager.md  qa.md  tester.md
src/xclaw/skills/code-review-handoff/: SKILL.md
src/xclaw/skills/execution-planning/: SKILL.md
src/xclaw/skills/quality-review/: SKILL.md
src/xclaw/skills/requirement-refinement/: SKILL.md
src/xclaw/skills/xllm-repo-learning/agents/: openai.yaml
src/xclaw/skills/xllm-repo-learning/references/: 0-overview.md  6-eplb.md  7-graph.md  8-kv_cache.md  9-parallel_state.md
src/xclaw/templates/: event_log.md.j2  task.md.j2
tests/: __init__.py  test_agent_adapter.py  test_cli.py  test_executor.py  test_gateway.py  test_human_io.py  test_protocol.py  test_workspace.py
