[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xclaw"
version = "0.1.0"
description = "Local serial multi-role coding pipeline orchestrator for xLLM."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
xclaw = "xclaw.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
xclaw = [
  "templates/*.j2",
  "templates/artifacts/*.j2",
  "agents/*",
  "skills/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
